tests/src/frontend/syntax/invalid/const_modifiers.sk
mutable const x: String = "Fail";
fun main(): String {
  x
}

